# shielded

./: .gitignore  CHANGELOG.md  Deployment.md  README.md  TODO.md  Testing.md  docker-compose.yml  pyproject.toml  railway.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  celery_app.py  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_previous_probability.py  003_add_user_and_tracking.py  004_multi_company.py  005_add_parent_child_events.py  006_add_ev_fields.py  007_add_risk_profile_and_exposure_status.py  008_add_ingestion_fields.py
backend/app/: auth.py  cache.py  config.py  database.py  logging.py  main.py  redis.py
backend/app/api/: companies.py  deps.py  events.py  health.py  hedge.py  impacts.py  risk.py  router.py  users.py
backend/app/ingestion/: base.py  ev.py  kalshi.py  metaculus.py  polymarket.py  registry.py
backend/app/models/: __init__.py  company.py  event.py  exposure.py  hedge_analysis.py  probability_history.py  user.py  user_tracked_event.py
backend/app/risk_engine/: README.md  __init__.py  hedges.py  impact_estimates.py  matcher.py  scoring.py  sector_defaults.py  themes.py  types.py
backend/app/schemas/: __init__.py  common.py  company.py  event.py  hedge.py  impact.py  risk.py  user.py
backend/app/seed/: data.py  generator.py  run.py
backend/app/services/: hedge_calculator.py  impact_calculator.py  risk_service.py
backend/app/tasks/: discovery.py  hedges.py  polling.py  risk_scoring.py
(+2186 files in other folders)
